fix: standardize component naming to camelCase for consistency

--- a/apps/ng-cropper-playground/src/index.html
+++ b/apps/ng-cropper-playground/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <NgCropperPlaygroundApp></NgCropperPlaygroundApp>
+    <ngCropperPlaygroundApp></ngCropperPlaygroundApp>
   </body>
 </html>
