--- a/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
+++ b/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
@@ -1,28 +1,42 @@
-<cropper-canvas background>
-  <cropper-image
-    src="https://fengyuanchen.github.io/cropperjs/images/picture.jpg"
-    alt="Picture"
-    rotatable
-    scalable
-    skewable
-    translatable
-  ></cropper-image>
-  <cropper-shade hidden></cropper-shade>
-  <cropper-handle action="select" plain></cropper-handle>
-  <cropper-selection initial-coverage="0.5" movable resizable>
-    <cropper-grid role="grid" covered></cropper-grid>
-    <cropper-crosshair centered></cropper-crosshair>
-    <cropper-handle
-      action="move"
-      theme-color="rgba(255, 255, 255, 0.35)"
-    ></cropper-handle>
-    <cropper-handle action="n-resize"></cropper-handle>
-    <cropper-handle action="e-resize"></cropper-handle>
-    <cropper-handle action="s-resize"></cropper-handle>
-    <cropper-handle action="w-resize"></cropper-handle>
-    <cropper-handle action="ne-resize"></cropper-handle>
-    <cropper-handle action="nw-resize"></cropper-handle>
-    <cropper-handle action="se-resize"></cropper-handle>
-    <cropper-handle action="sw-resize"></cropper-handle>
-  </cropper-selection>
+<cropper-canvas #cropperCanvas background>
+    <cropper-image
+        #cropperImage
+        src="https://fengyuanchen.github.io/cropperjs/images/picture.jpg"
+        alt="Picture"
+        rotatable
+        scalable
+        skewable
+        translatable
+    ></cropper-image>
+    <cropper-shade #cropperShade hidden></cropper-shade>
+    <cropper-handle #cropperHandle action="select" plain></cropper-handle>
+    <cropper-selection #cropperSelection initial-coverage="0.5" movable resizable>
+        <cropper-grid #cropperGrid role="grid" covered></cropper-grid>
+        <cropper-crosshair #cropperCrosshair centered></cropper-crosshair>
+        <cropper-handle #cropperHandle action="move" theme-color="rgba(255, 255, 255, 0.35)"></cropper-handle>
+        <cropper-handle #cropperHandle action="n-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="e-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="s-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="w-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="ne-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="nw-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="se-resize"></cropper-handle>
+        <cropper-handle #cropperHandle action="sw-resize"></cropper-handle>
+    </cropper-selection>
 </cropper-canvas>
+
+
+<!-- FOR DEBUGGING -->
+<!-- @if(cropperCanvasRef()?.nativeElement){ hasCanvas: {{!!cropperCanvasRef().nativeElement.hidden}}
+<br />
+hasImage: {{!!cropperImageRef().nativeElement.hidden}}
+<br />
+hasShade: {{!!cropperShadeRef().nativeElement.hidden}}
+<br />
+hasHandle: {{cropperHandleRefs().length}}
+<br />
+hasSelection: {{!!cropperSelectionRef().nativeElement.hidden}}
+<br />
+hasGrid: {{!!cropperGridRef().nativeElement.hidden}}
+<br />
+hasCrosshair: {{!!cropperCrosshairRef().nativeElement.hidden}} } -->
