--- a/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
+++ b/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
@@ -1,7 +1,11 @@
 <div class="ng-cropper-container border border-gray-300 rounded-lg shadow-lg" [class]="cropperContainerClass()">
-    @if (showToolbar() && toolbarPosition() === 'top') {
-    <div class="flex justify-center py-2 bg-gray-50 border-b">
-        <ngCropperToolbar [cropperRef]="cropperSelf" />
+    @if (showToolbar()) {
+    <div class="pointer-events-none absolute z-[2147483647]" [style.top]="toolbarPosition() === 'top' ? '0' : null" [style.bottom]="toolbarPosition() === 'bottom' ? '0' : null" style="left:0; right:0;">
+        <div class="flex justify-center py-2">
+            <div class="pointer-events-auto">
+                <ngCropperToolbar [cropperRef]="cropperSelf" />
+            </div>
+        </div>
     </div>
     }
     <cropper-canvas class="cropper-canvas" #cropperCanvas [class]="cropperCanvasClass()">
@@ -37,9 +41,4 @@
             <cropper-handle #cropperHandle class="cropper-handle sw-resize" [class]="cropperHandleClass()" action="sw-resize" />
         </cropper-selection>
     </cropper-canvas>
-    @if (showToolbar() && toolbarPosition() === 'bottom') {
-    <div class="flex justify-center py-2 bg-gray-50 border-t">
-        <ngCropperToolbar [cropperRef]="cropperSelf" />
-    </div>
-    }
 </div>
