feat(toolbar): enhance toolbar functionality with dynamic tool visibility and SVG icons
- Refactored Toolbar component to support dynamic visibility of tools based on user configuration.
- Introduced new icon templates for rotate left, rotate right, zoom in, zoom out, crop, and reset actions.
- Added Tooltip and IconViewer templates for better code organization and reusability.
- Created a new constants file for default toolbar icons.
- Implemented a SafeHTML pipe for sanitizing SVG icons.
- Updated NgCropper configuration to include toolbar settings and initial state.

--- a/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
+++ b/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
@@ -1,9 +1,20 @@
 <div class="ng-cropper-container border border-gray-300 rounded-lg shadow-lg" [class]="cropperContainerClass()">
     @if (showToolbar()) {
-    <div class="pointer-events-none absolute z-[2147483647]" [style.top]="toolbarPosition() === 'top' ? '0' : null" [style.bottom]="toolbarPosition() === 'bottom' ? '0' : null" style="left:0; right:0;">
+    <div
+        class="pointer-events-none absolute z-[2147483647]"
+        [style.top]="toolbarPosition() === 'top' ? '0' : null"
+        [style.bottom]="toolbarPosition() === 'bottom' ? '0' : null"
+        style="left: 0; right: 0"
+    >
         <div class="flex justify-center py-2">
             <div class="pointer-events-auto">
+                @defer (when showToolbar()) {
                 <ngCropperToolbar [cropperRef]="cropperSelf" />
+                }@placeholder {
+                <div class="flex items-center">
+                    <span class="text-gray-500">Loading toolbar...</span>
+                </div>
+                }
             </div>
         </div>
     </div>
