--- a/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
+++ b/libs/ng-cropper/src/lib/NgCropper/NgCropper.html
@@ -1,15 +1,30 @@
 <div class="ng-cropper-container border border-gray-300 rounded-lg shadow-lg" [class]="cropperContainerClass()">
-    @if (showToolbar()) {
+    @if (toolbar$().show) {
     <div
         class="pointer-events-none absolute z-[2147483647]"
-        [style.top]="toolbarPosition() === 'top' ? '0' : null"
-        [style.bottom]="toolbarPosition() === 'bottom' ? '0' : null"
+        [style.top]="toolbar$().position === 'top' ? '0' : null"
+        [style.bottom]="toolbar$().position === 'bottom' ? '0' : null"
         style="left: 0; right: 0"
     >
         <div class="flex justify-center py-2">
             <div class="pointer-events-auto">
-                @defer (when showToolbar()) {
-                <ngCropperToolbar [cropperRef]="cropperSelf" />
+                @defer (when toolbar$().show) {
+                <ngCropperToolbar 
+                    [cropperRef]="cropperSelf"
+                    [visibleTools]="toolbar$().visibleTools"
+                    [rotateLeftIcon]="toolbar$().icons.rotateLeft || ''"
+                    [rotateRightIcon]="toolbar$().icons.rotateRight || ''"
+                    [zoomInIcon]="toolbar$().icons.zoomIn || ''"
+                    [zoomOutIcon]="toolbar$().icons.zoomOut || ''"
+                    [cropIcon]="toolbar$().icons.crop || ''"
+                    [resetIcon]="toolbar$().icons.reset || ''"
+                    [rotateLeftTooltip]="toolbar$().tooltips.rotateLeft || ''"
+                    [rotateRightTooltip]="toolbar$().tooltips.rotateRight || ''"
+                    [zoomInTooltip]="toolbar$().tooltips.zoomIn || ''"
+                    [zoomOutTooltip]="toolbar$().tooltips.zoomOut || ''"
+                    [cropTooltip]="toolbar$().tooltips.crop || ''"
+                    [resetTooltip]="toolbar$().tooltips.reset || ''"
+                />
                 }@placeholder {
                 <div class="flex items-center">
                     <span class="text-gray-500">Loading toolbar...</span>
